[gd_scene load_steps=7 format=3 uid="uid://dx0vhvsthi046"]

[ext_resource type="Script" uid="uid://gpnhowejkrff" path="res://Scenes/pipe_pair.gd" id="1_d5igu"]
[ext_resource type="Texture2D" uid="uid://cqjut2uxjbvrl" path="res://Assets/candycane-pipe.png" id="2_d5igu"]
[ext_resource type="Texture2D" uid="uid://t7jcgjlg7mvx" path="res://Assets/marshmallow-pipe.png" id="3_6ox5h"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wsb3u"]
size = Vector2(72, 281.25)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1wd7e"]
size = Vector2(78.3333, 275.25)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e6bhp"]
size = Vector2(5, 132)

[node name="PipePair" type="Node2D"]
script = ExtResource("1_d5igu")

[node name="TopPipe" type="Area2D" parent="."]
position = Vector2(0, -1200)
rotation = 3.14159
scale = Vector2(3, 4)

[node name="candycanepipe" type="Sprite2D" parent="TopPipe"]
position = Vector2(0, -125)
scale = Vector2(0.15, 0.19)
texture = ExtResource("2_d5igu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopPipe"]
position = Vector2(1.33415, -101.625)
shape = SubResource("RectangleShape2D_wsb3u")

[node name="marshmallowpipe" type="Sprite2D" parent="TopPipe"]
position = Vector2(0, -110)
scale = Vector2(0.19, 0.19)
texture = ExtResource("3_6ox5h")

[node name="BottomPipe" type="Area2D" parent="."]
position = Vector2(0, 1200)
scale = Vector2(3, 4)

[node name="candycanepipe" type="Sprite2D" parent="BottomPipe"]
position = Vector2(0, -125)
scale = Vector2(0.15, 0.19)
texture = ExtResource("2_d5igu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomPipe"]
position = Vector2(5.5, -104.625)
shape = SubResource("RectangleShape2D_1wd7e")

[node name="marshmallowpipe" type="Sprite2D" parent="BottomPipe"]
position = Vector2(0, -110)
scale = Vector2(0.19, 0.19)
texture = ExtResource("3_6ox5h")

[node name="Scored" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Scored"]
position = Vector2(35, 0)
shape = SubResource("RectangleShape2D_e6bhp")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="body_entered" from="TopPipe" to="." method="_on_body_entered"]
[connection signal="body_entered" from="BottomPipe" to="." method="_on_body_entered"]
[connection signal="body_entered" from="Scored" to="." method="on_point_scored"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
